--- a/src/template.html
+++ b/src/template.html
@@ -141,8 +141,16 @@
             <div class="checklistAll">
                 <div class="checklistContainer"></div>
             </div>
+    </dialog class="confirmDeleteCheckEntry">
+    <dialog class="deleteConfirmation">
+        <p>Do you want to set this checklist entry to done?</p>
+        <form action="">
+            <menu>
+                <button type="submit" class="confirmCheckentryDelete">Confirm</button>
+                <button type="button" id="denyCheckentryDelete">No</button>
+            </menu>
+        </form>
     </dialog>
-
     <script src="index.js" type="module"></script>
 </body>
 
