overhauled layout colors

--- a/src/template.html
+++ b/src/template.html
@@ -12,22 +12,27 @@
     <div class="progbox">
         <div class="dashboard">
             <div class="nav">
-                <h4 class="username"></h4>
+                <p></p>
                 <p>TO DO LIST MANAGER</p>
-                <button class="addAToDo">New Todo</button>
+                <menu>
+                    <button type="button" class="showAllProjects">Show all projects</button>
+                    <button type="button" id="newProjectButton">New Project</button>
+                </menu>
+                <p>
+                    <button class="addAToDo">New Todo</button>
+                </p>
                 <p class="TaskTableHeadings">Today</p>
                 <p class="todosToday"></p>
                 <p class="TaskTableHeadings">Next 7 days</p>
                 <p class="todosNext7Days"></p>
                 <p class="TaskTableHeadings">All my Tasks</p>
-                <button type="button" class="showAllProjects">Show all projects</button>
-                <button type="button" id="newProjectButton">New Project</button>
+
                 <p>LIST OF PROJECTS:</p>
                 <table class="projectList"></table>
             </div>
         </div>
         <div class="panel">
-            <div class="participants">
+            <div class="openProject">
 
             </div>
             <div class="presentationSection">
