--- a/src/template.html
+++ b/src/template.html
@@ -13,21 +13,19 @@
         <div class="dashboard">
             <div class="nav">
                 <p></p>
-                <p>TO DO LIST MANAGER</p>
+                <h1>TO DO LIST MANAGER</h1>
                 <menu>
                     <button type="button" class="showAllProjects">Show all projects</button>
                     <button type="button" id="newProjectButton">New Project</button>
-                </menu>
-                <p>
                     <button class="addAToDo">New Todo</button>
-                </p>
-                <p class="TaskTableHeadings">Today</p>
-                <p class="todosToday"></p>
-                <p class="TaskTableHeadings">Next 7 days</p>
-                <p class="todosNext7Days"></p>
-                <p class="TaskTableHeadings">All my Tasks</p>
+                </menu>
 
-                <p>LIST OF PROJECTS:</p>
+                <h1 class="TaskTableHeadings">Today</h1>
+                <p class="todosToday"></p>
+                <h1 class="TaskTableHeadings">Next 7 days</h1>
+                <p class="todosNext7Days"></p>
+
+                <h1>LIST OF PROJECTS:</h1>
                 <table class="projectList"></table>
             </div>
         </div>
@@ -106,7 +104,11 @@
     <dialog class="extendedTodo">
         <form action="" method="dialog" id="extendedTodoDialogForm">
             <section>
-                <button type="reset" class="closeExtendedTodoDialog">Close Form</button>
+
+                <div>
+                    <div></div>
+                    <button type="reset" class="closeExtendedTodoDialog">Close Form</button>
+                </div>
 
                 <p>
                     <label for="toDoTitle">Title:</label>
@@ -138,16 +140,17 @@
             </menu>
             <div class="checklistAll">
                 <div class="newCheckEntry">
-                    <p>Add an entry to the checklist:</p>
                     <form method="dialog" action="">
                         <p>
                             <textarea name="newCheck" id="newCheck" rows="5" cols="30" minlength="10" maxlength="20"
-                                placeholder="Enter entry here:"></textarea>
+                                placeholder="Add an entry to the checklist:"></textarea>
+                        </p>
+                        <p>
                             <button type="button" id="submitNewCheck">Add</button>
                         </p>
                     </form>
                 </div>
-                <p>Checklist:</p>
+                <p>Checklist (scroll to watch):</p>
                 <div class="checklistContainer"></div>
             </div>
         </form>
