--- a/src/template.html
+++ b/src/template.html
@@ -16,8 +16,8 @@
                 <h1>TO DO LIST MANAGER</h1>
                 <menu>
                     <button type="button" class="showAllProjects">Show all projects</button>
-                    <button type="button" id="newProjectButton">New Project</button>
-                    <button class="addAToDo">New Todo</button>
+                    <button type="button" class="newProjectButton">New Project</button>
+                    <button type="button" class="addAToDo">New Todo</button>
                 </menu>
 
                 <h1 class="TaskTableHeadings">Today</h1>
@@ -153,15 +153,6 @@
                 <p>Checklist (scroll to watch):</p>
                 <div class="checklistContainer"></div>
             </div>
-        </form>
-    </dialog>
-    <dialog class="deleteConfirmation">
-        <p>Do you want to set this checklist entry to done?</p>
-        <form action="">
-            <menu>
-                <button type="button" class="confirmCheckentryDelete">Confirm</button>
-                <button type="button" id="denyCheckentryDelete">No</button>
-            </menu>
         </form>
     </dialog>
     <script src="index.js" type="module"></script>
