--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-</head>
+    <link rel="shortcut icon" href="09f8ba5f9d68fc2ebece.ico" type="image/x-icon" />
+<script defer src="main.js"></script></head>
 
 <body>
     <div class="progbox">
@@ -155,7 +155,7 @@
             </div>
         </form>
     </dialog>
-    <script src="index.js" type="module"></script>
+    <script src="d5386411fc93718d281f.js" type="module"></script>
 </body>
 
 </html>
